@@ -2,11 +2,17 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.08 [20120123] [svn: r190]
+ChangeLog for sdparm-1.08 [20120313] [svn: r191]
   - control extension mpage: add max sense data length
+  - power condition mpage: FIDCPC->CCF_IDLE,
+    FSBCPC->CCF_STAND, FSTCPC->CCF_STOPP (spc4r34+)
   - extended inquiry vpd page: add max supported sense data
     length
   - add placeholder for third party copy VPD page
+  - ./configure options:
+    - change --enable-no-linux-bsg to --disable-linuxbsg
+    - add --disable-scsistrings to reduce utility size
+      with non-libsgutils build
 
 ChangeLog for sdparm-1.07 [20120121] [svn: r188]
   - LB provisioning + Block limits VPD pages to sbc3r27
